# Metahacksaizen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  raw.text  requirements.txt
.github/workflows/: ci.yml
devops_openenv/: __init__.py  environment.py  graders.py  models.py  tasks.py
server/: app.py
