[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metahacksaizen"
version = "0.1.0"
description = "DevOps Incident OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mayank Tak" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["devops_openenv*"]
