[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metahacksaizen"
version = "0.1.0"
description = "DevOps Incident OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mayank Tak" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "openai>=1.75.0",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["devops_openenv*"]
